Wed May 10 01:47:22 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* bseblockutils.cc (range, range_and_square_sum): Use SSE functions to
	calculate the minimum/maximum and the vector sum after the main loop.
	I benchmarked it on AMD64 and Pentium-M, and its faster on both.

Tue May  9 22:57:07 2006  Tim Janik  <timj@gtk.org>

	* bseblockutils.cc: define _mm_extract_ss() for convenience.
	square_sum(): use SSE functions to calculate the vector sum
	after the main loop.

Tue May  9 16:54:22 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* bseblockutils.cc: Implement new sub, mul, range, square_sum,
	range_and_square_sum functions using SSE.

Mon May  8 03:27:48 2006  Tim Janik  <timj@gtk.org>

	* bseadder.c: deprecated this plugin (use BseSummation instead).

	* *.c: adapted to new BSE_REGISTER_OBJECT*() macro args.

Mon May  8 02:26:40 2006  Tim Janik  <timj@gtk.org>

	* Makefile.am:
	* Makefile.plugins:
	* icons/Makefile.icons: build and install BseSummation.

Mon May  8 01:23:45 2006  Tim Janik  <timj@gtk.org>

	* bsesummation.cc:
	* bsesummation.idl: CVS copied here from bse/.

	* icons/summation.png:
	* icons/summation.xcf: CVS copied here from bse/icons/.

Mon May  8 00:25:25 2006  Tim Janik  <timj@gtk.org>

	* bseamplifier.cc:
	* Makefile.plugins:
	* Makefile.am: added BseAmplifier to plugins/.

Sun May  7 23:53:16 2006  Tim Janik  <timj@gtk.org>

	* icons/ampctrl.png:
	* icons/ampctrl.xcf: CVS copied here from bse/icons/.

Sun May  7 23:48:35 2006  Tim Janik  <timj@gtk.org>

	* bseamplifier.idl: 
	* bseamplifier.cc: CVS copied here from bse/.

Thu Apr 20 20:08:52 2006  Tim Janik  <timj@gtk.org>

	* bseblockutils.cc: fixed inner variable declarations which erroneously
	shadowed the real variables declared in an outer scope. this fixes mis-
	calculations of the add() and scale() SSE routines. fix from Stefan
	Westerfeld.

Thu Apr 20 01:33:47 2006  Tim Janik  <timj@gtk.org>

	* bseblockutils.cc: fixed alignment check logic in ::scale(), this 