@@ -1,3 +1,9 @@
+Wed May 10 15:12:26 2006  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* bseblockutils.cc: Minor optimizations, introduced a few LIKELY()
+	calls to indicate what usually should be the case, and improved some
+	comments.
+
 Wed May 10 01:47:22 2006  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* bseblockutils.cc (range, range_and_square_sum): Use SSE functions to
